force-app/main/default/objects/Lista_Super_Producto__c/Lista_Super_Producto__c.object-meta.xml
<CustomObject>
    <label>Lista Super &amp; Producto</label>
    <nameField>
        <displayFormat>LSP-{000000}</displayFormat>
        <label>Lista Super Producto Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listas Super Producto</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>