force-app/main/default/objects/Lista_Super_Producto__c/fields/Comprado__c.field-meta.xml
<CustomField>
    <fullName>Comprado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comprado</label>
    <type>Checkbox</type>
</CustomField>