force-app/main/default/objects/Lista_Super_Producto__c/fields/Lista_Super__c.field-meta.xml
<CustomField>
    <fullName>Lista_Super__c</fullName>
    <label>Lista Super</label>
    <referenceTo>Lista_Super__c</referenceTo>
    <relationshipName>Listas_Super_Producto</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>