force-app/main/default/objects/Lista_Super_Producto__c/fields/Nota__c.field-meta.xml
<CustomField>
    <fullName>Nota__c</fullName>
    <label>Nota</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>