force-app/main/default/objects/Lista_Super_Producto__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <label>Producto</label>
    <referenceTo>Producto__c</referenceTo>
    <relationshipName>Listas_Super_Producto</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>